maintainIT2/src/objects/WO_Part__c.object
<CustomObject>
    <description>Work Order Parts List</description>
    <fields>
        <fullName>Actual_Part_Cost__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Actual Part Cost.  System populated via workflow.  Field security should be set to read only for all profiles.</description>
        <inlineHelpText>Actual Part Cost.  System populated via workflow.  Field security should be set to read only for all profiles.</inlineHelpText>
        <label>Actual Part Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>Comment</description>
        <inlineHelpText>Comment</inlineHelpText>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commit_Inventory__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The Commit Inventory flag is used to determine if the Open Qty amount of the WO Part places a demand on inventory and subsequently reduces the &quot;Available Qty&quot; for the Part.</description>
        <inlineHelpText>The Commit Inventory flag is used to determine if the Open Qty amount of the WO Part places a demand on inventory and subsequently reduces the &quot;Available Qty&quot; for the Part.</inlineHelpText>
        <label>Commit Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commit_Qty__c</fullName>
        <description>The Commit Qty is the Open Qty if the Commit Flag on the WO Part line is checked and if the Work Order has been released but is not yet complete.  Otherwise, the Commit Qty is equal to zero.</description>
        <formula>IF( Commit_Inventory__c = True, IF( (WO_Status_Num__c = 12)  ||  (WO_Status_Num__c =9)  ||  (WO_Status_Num__c =6),   IF( Planned_Qty__c  &gt;=  Issued_Qty__c ,  Planned_Qty__c  -  Issued_Qty__c , 0), 0), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Commit Qty is the Open Qty if the Commit Flag on the WO Part line is checked and if the Work Order has been released but is not yet complete.  Otherwise, the Commit Qty is equal to zero.</inlineHelpText>
        <label>Commit Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issued_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Qty of the part issued to the work order.  System populated via workflow.  Field security should be set to read only for all profiles.</description>
        <inlineHelpText>Qty of the part issued to the work order.  System populated via workflow.  Field security should be set to read only for all profiles.</inlineHelpText>
        <label>Issued Qty</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Hand_Qty__c</fullName>
        <description>Formula reference to Part On Hand Qty</description>
        <formula>Part__r.On_Hand_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula reference to Part On Hand Qty</inlineHelpText>
        <label>On Hand Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Commit_Qty__c</fullName>
        <description>Open Commit Qty = Open Qty when Work Order Status = Ready to Schedule, Schedule, In Progress; Else Zero (0).  System populated value via workflow.  Field security should be set to read only for all profiles.  Value written from WO Part Commit Qty.  This is used as a workaround since the Commit Qty is a cross object formula field and not able to be used in the Rollup on the Part Object.</description>
        <inlineHelpText>Open Commit Qty = Planned Qty - Issued Qty.  System populated value via workflow.  Field security should be set to read only for all profiles.</inlineHelpText>
        <label>Open Commit Qty</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Qty__c</fullName>
        <description>Open Qty = Planned Qty - Issued Qty</description>
        <formula>IF( Planned_Qty__c  &gt;=  Issued_Qty__c ,  Planned_Qty__c  -  Issued_Qty__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Open Qty = Planned Qty - Issued Qty</inlineHelpText>
        <label>Open Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Part_Description__c</fullName>
        <description>Formula reference to Part Description</description>
        <formula>Part__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula reference to Part Description</inlineHelpText>
        <label>Part Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <description>Part ID</description>
        <inlineHelpText>Part ID</inlineHelpText>
        <label>Part</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Part__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Stock Item</value>
            </filterItems>
            <infoMessage>The Stock Item Record Type is filtered by Default.  Clear the filter to view other Record Types</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Work Order Parts</relationshipLabel>
        <relationshipName>Work_Order_Parts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Planned_Part_Cost__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Planned Part Cost.  System populated via workflow.  Field security should be set to read only for all profiles.</description>
        <inlineHelpText>Planned Part Cost.  System populated via workflow.  Field security should be set to read only for all profiles.</inlineHelpText>
        <label>Planned Part Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The &quot;Planned Qty&quot; represents the total number of units of the part that are estimated to be used to perform the work.</description>
        <inlineHelpText>The &quot;Planned Qty&quot; represents the total number of units of the part that are estimated to be used to perform the work.</inlineHelpText>
        <label>Planned Qty</label>
        <precision>7</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_to_Issue__c</fullName>
        <description>&quot;Qty to Issue&quot; is used for batch issuing parts from the Work Order Parts Tab.</description>
        <inlineHelpText>&quot;Qty to Issue&quot; is used for batch issuing parts from the Work Order Parts Tab.</inlineHelpText>
        <label>Qty to Issue</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WO_Schedule_Date__c</fullName>
        <description>Formula reference to Work Order Scheduled Start Date</description>
        <formula>Work_Order__r.Scheduled_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula reference to Work Order Scheduled Start Date</inlineHelpText>
        <label>WO Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WO_Status_Num__c</fullName>
        <description>Formula reference to Work Order Status Num (a numerical cross reference to Work Order Status).</description>
        <formula>Work_Order__r.Status_Num__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula reference to Work Order Status Num (a numerical cross reference to Work Order Status).</inlineHelpText>
        <label>WO Status Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WO_Task_Schedule_Date__c</fullName>
        <description>Formula Reference to Work Order Task Schedule Date</description>
        <formula>WO_Task__r.Schedule_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Reference to Work Order Task Schedule Date</inlineHelpText>
        <label>WO Task Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WO_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>WO Task for which this part is being planned.  Use when you schedule parts picking to individually scheduled Work Order Tasks.</description>
        <inlineHelpText>WO Task for which this part is being planned.  Use when you schedule parts picking to individually scheduled Work Order Tasks.</inlineHelpText>
        <label>WO Task</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Part and Task must be related to the same Work Order</errorMessage>
            <filterItems>
                <field>WO_Labor__c.Work_Order__c</field>
                <operation>equals</operation>
                <valueField>$Source.Work_Order__c</valueField>
            </filterItems>
            <infoMessage>Select a Work Order Task to relate the Part</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>WO_Labor__c</referenceTo>
        <relationshipLabel>WO Parts</relationshipLabel>
        <relationshipName>WO_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <description>Work Order #</description>
        <inlineHelpText>Work Order #</inlineHelpText>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Work Order Parts</relationshipLabel>
        <relationshipName>Work_Order_Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>WO Part</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Work_Order__c</columns>
        <columns>Part__c</columns>
        <columns>Part_Description__c</columns>
        <columns>Planned_Qty__c</columns>
        <columns>Qty_to_Issue__c</columns>
        <columns>On_Hand_Qty__c</columns>
        <columns>Issued_Qty__c</columns>
        <columns>Open_Qty__c</columns>
        <columns>Open_Commit_Qty__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WP-{0000000}</displayFormat>
        <label>Work Order Parts</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WO Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>WO_Part_Planned_Qty_Positive</fullName>
        <active>true</active>
        <description>Enforces the rule that the planned qty must be greater than or equal to zero.</description>
        <errorConditionFormula>Planned_Qty__c   &lt; 0</errorConditionFormula>
        <errorDisplayField>Planned_Qty__c</errorDisplayField>
        <errorMessage>The Planned Qty must be greater than or equal to zero</errorMessage>
    </validationRules>
</CustomObject>